Closed
Bug 1271747
Opened 9 years ago
Closed 9 years ago
B2OS: GLContextProviderEGL.cpp:25:35: fatal error: AndroidBridge.h: No such file or directory
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(firefox49 fixed)
RESOLVED
FIXED
| Tracking | Status | |
|---|---|---|
| firefox49 | --- | fixed |
People
(Reporter: gwagner, Assigned: gwagner)
References
Details
Attachments
(1 file)
|
794 bytes,
patch
|
snorp
:
review+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Updated•9 years ago
|
| Assignee | ||
Comment 1•9 years ago
|
||
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → anygregor
| Assignee | ||
Updated•9 years ago
|
Attachment #8750921 -
Flags: review?(snorp)
Attachment #8750921 -
Flags: review?(snorp) → review+
Comment 3•9 years ago
|
||
| bugherder | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•