Bug 1271747 - Fix AndroidBridge.h include in GLContextProviderEGL.cpp. r=snorp